new experiments results ready for paper1

--- a/resultPaper1.tex
+++ b/resultPaper1.tex
@@ -1,16 +1,13 @@
-\begin{tabular}{r|cccccccccccc}
- & \rotatebox{90}{Alin} & \rotatebox{90}{AML} & \rotatebox{90}{CroMatcher} & \rotatebox{90}{DKP-AOM-Lite} & \rotatebox{90}{DKP-AOM} & \rotatebox{90}{FCA_Map} & \rotatebox{90}{Lily} & \rotatebox{90}{LogMapLite} & \rotatebox{90}{LPHOM} & \rotatebox{90}{LYAM} & \rotatebox{90}{OurResult} & \rotatebox{90}{XMap} \\ \hline
-Alin & 0 & 0 & 13 & 405 & 405 & 2 & 18 & 2 & 52 & 3 & 508 & 0\\
-AML & 911 & 0 & 62 & 1214 & 1214 & 184 & 237 & 328 & 339 & 118 & 1418 & 134\\
-CroMatcher & 873 & 11 & 0 & 1170 & 1170 & 176 & 216 & 311 & 314 & 108 & 1367 & 124\\
-DKP-AOM-Lite & 102 & 0 & 7 & 0 & 0 & 0 & 13 & 0 & 49 & 1 & 205 & 0\\
-DKP-AOM & 102 & 0 & 7 & 0 & 0 & 0 & 13 & 0 & 49 & 1 & 205 & 0\\
-FCA_Map & 763 & 34 & 77 & 1064 & 1064 & 0 & 161 & 167 & 253 & 51 & 1268 & 58\\
-Lily & 713 & 21 & 51 & 1011 & 1011 & 95 & 0 & 176 & 210 & 45 & 1202 & 60\\
-LogMapLite & 597 & 12 & 46 & 898 & 898 & 1 & 76 & 0 & 203 & 5 & 1102 & 19\\
-LPHOM & 646 & 22 & 48 & 946 & 946 & 86 & 109 & 202 & 0 & 43 & 1101 & 39\\
-LYAM & 823 & 27 & 68 & 1124 & 1124 & 110 & 170 & 230 & 269 & 0 & 1327 & 74\\
-OurResult & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
-XMap & 804 & 27 & 68 & 1107 & 1107 & 101 & 169 & 228 & 249 & 58 & 1311 & 0\\
+\begin{tabular}{r|ccccccccc}
+ & \rotatebox{90}{Equal} & \rotatebox{90}{Hamming} & \rotatebox{90}{Jaro} & \rotatebox{90}{JaroWinkler} & \rotatebox{90}{Levenshtein} & \rotatebox{90}{N-gram} & \rotatebox{90}{NeedlemanWunsch2} & \rotatebox{90}{SMOA} & \rotatebox{90}{SubString} \\ \hline
+Equal & 0 & 0 & 2 & 2 & 0 & 0 & 0 & 71 & 0\\
+Hamming & 842 & 0 & 51 & 51 & 32 & 54 & 48 & 258 & 494\\
+Jaro & 888 & 95 & 0 & 0 & 42 & 59 & 60 & 252 & 532\\
+JaroWinkler & 888 & 95 & 0 & 0 & 42 & 59 & 60 & 252 & 532\\
+Levenshtein & 966 & 156 & 122 & 122 & 0 & 64 & 50 & 277 & 593\\
+N-gram & 1041 & 253 & 214 & 214 & 139 & 0 & 174 & 290 & 636\\
+NeedlemanWunsch2 & 932 & 138 & 106 & 106 & 16 & 65 & 0 & 276 & 573\\
+SMOA & 880 & 225 & 175 & 175 & 120 & 58 & 153 & 0 & 552\\
+SubString & 422 & 74 & 68 & 68 & 49 & 17 & 63 & 165 & 0\\
 
 \end{tabular}
